--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ build:
     - echo $CI_COMMIT_REF_NAME
     - if git diff --quiet origin/master...$CI_COMMIT_REF_NAME --exit-code && [[ $TEST != "TRUE" ]]; then exit 0; fi
     - apk update && apk add curl
-
+    - apk add maven
   script:
     - mvn clean install -DskipTests
 
