--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ stages:
   - publish
 build:
   tags:
-    - privileged
+    - large
 
   image: alpine:latest
   stage: build
@@ -27,7 +27,7 @@ build:
 
 publish:
   tags:
-    - privileged
+    - large
 
   image: alpine:latest
   stage: publish
