--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,13 +11,7 @@ build:
     - large
 
   image: hub.missionfocus.com/ours/code/cicd/ci-images/centos/fullstack:master
-#  image: alpine:latest
   stage: build
-#  before_script:
-#    - echo $CI_COMMIT_REF_NAME
-#    - if git diff --quiet origin/master...$CI_COMMIT_REF_NAME --exit-code && [[ $TEST != "TRUE" ]]; then exit 0; fi
-#    - apk update && apk add curl
-#    - apk add maven
   script:
     - mvn clean install -DskipTests
 
@@ -32,19 +26,18 @@ build:
 
 publish:
   tags:
-    - small
+    - large
   image: hub.missionfocus.com/ours/code/cicd/ci-images/centos/fullstack:master
-#  image: alpine:latest
   stage: publish
 
-  before_script:
-    - echo $CI_COMMIT_REF_NAME
-    - if git diff --quiet origin/master...$CI_COMMIT_REF_NAME --exit-code && [[ $TEST != "TRUE" ]]; then exit 0; fi
-    - apk update && apk add curl
-    - apk add maven
+#  before_script:
+#    - echo $CI_COMMIT_REF_NAME
+#    - if git diff --quiet origin/master...$CI_COMMIT_REF_NAME --exit-code && [[ $TEST != "TRUE" ]]; then exit 0; fi
+#    - apk update && apk add curl
+#    - apk add maven
   script:
-    - mkdir -p /root/.m2/
-    - echo "<settings><servers><server><id>internal.repo</id><username>\${repo.login}</username><password>\${repo.pwd}</password></server></servers></settings>" >> ~/.m2/settings.xml
+ #   - mkdir -p /root/.m2/
+  #  - echo "<settings><servers><server><id>internal.repo</id><username>\${repo.login}</username><password>\${repo.pwd}</password></server></servers></settings>" >> ~/.m2/settings.xml
     - PROJECT_VERSION=`mvn org.apache.maven.plugins:maven-help-plugin:3.1.0:evaluate -Dexpression=project.version -q -DforceStdout`
     - PROJECT_GROUP_ID=`mvn org.apache.maven.plugins:maven-help-plugin:3.1.0:evaluate -Dexpression=project.groupId -q -DforceStdout`
     - PROJECT_ARTIFACT_ID=`mvn org.apache.maven.plugins:maven-help-plugin:3.1.0:evaluate -Dexpression=project.artifactId -q -DforceStdout`
@@ -54,9 +47,10 @@ publish:
     - echo $PROJECT_ARTIFACT_ID
     - echo $JAR_LOCATION
     - env
-    - mvn deploy:deploy-file -DgroupId=$PROJECT_GROUP_ID -DartifactId=$PROJECT_ARTIFACT_ID -Dversion=$PROJECT_VERSION -DgeneratePom=true -Dpackaging=jar -DrepositoryId=internal.repo -Drepo.login=admin -Drepo.pwd=$NEXUS_PASS -Durl=https://nexus.missionfocus.com/repository/maven-releases/ -Dfile=$JAR_LOCATION
+    - mvn deploy:deploy-file -DgroupId=$PROJECT_GROUP_ID -DartifactId=$PROJECT_ARTIFACT_ID -Dversion=$PROJECT_VERSION -DgeneratePom=true -Dpackaging=jar -DrepositoryId=internal.repo -Drepo.login=admin  -Durl=https://nexus.missionfocus.com/repository/maven-releases/ -Dfile=$JAR_LOCATION
   only:
     - master
+    - dynamodb
   except:
     variables:
       - $TEST_PUBLISH_ONLY == "TRUE"
